--- a/bio.html
+++ b/bio.html
@@ -10,7 +10,7 @@
     <h3>A short introduction about myself</h2>
 <hr>
 
-<img src="meprofile.jpg" alt="Profile picture placeholder" height="200px" width="200px">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsxQqhUSjsqjvsc7GrpzMYiDrvxCwEGZlmtQ&s" alt="Profile picture placeholder" height="200px" width="200px">
 
 <br><br>
 
