Fix typos and update GitHub link in bio.html
Corrected typos in the bio section and updated GitHub link.

--- a/bio.html
+++ b/bio.html
@@ -18,7 +18,7 @@
 
 
 <P>
-    My anem is <strong>Marian</strong>.
+    My namee is <strong>Marian</strong>.
     I am an <em>Information Technology</em> working student who 
     balances academic responsibilities with real-world work experience. 
     
@@ -63,11 +63,10 @@
 
     <h5>Contact</h5>
     <p>
-        You can find me on github here:
-    </p>
-    <a href="https://github.com/Hayatebal" target="_blank">
-        
-    </a>
+  You can find me on GitHub here:
+  <a href="https://github.com/hayatebal" target="_blank">GitHub Profile</a>
+</p>
+
 </div>
 </body>
 </html>
